// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultUtil component renders correctly with movie not selected 1`] = `
<div
  className={undefined}
>
  <p>
    10 movies found
  </p>
  <div
    className={undefined}
  >
    <div>
      Sort By
    </div>
    <div
      className={undefined}
      onClick={[Function]}
      role="button"
    >
      release date
    </div>
    <div
      className=""
      onClick={[Function]}
      role="button"
    >
      rating
    </div>
  </div>
</div>
`;

exports[`ResultUtil component renders correctly with movie selected 1`] = `
<div
  className={undefined}
>
  <p>
    Films by Crime genre
  </p>
  <div
    className={undefined}
  >
    <div>
      Sort By
    </div>
    <div
      className={undefined}
      onClick={[Function]}
      role="button"
    >
      release date
    </div>
    <div
      className=""
      onClick={[Function]}
      role="button"
    >
      rating
    </div>
  </div>
</div>
`;
